클릭로그 수정

--- a/logstash.conf
+++ b/logstash.conf
@@ -1,6 +1,9 @@
 input {
   file {
     path => '/home/godjy52/project/django/django_log.log'
+    codec => plain {
+      charset => "EUC-KR"
+    }
   }
 }
 
